# vulkan-rs

./: Cargo.toml  README.md  vkinfo.txt
examples/: development.rs  version.rs
src/: command_buffer.rs  core.rs  device.rs  ffi.rs  format.rs  init.rs  lib.rs  pipeline.rs  resource.rs  shaders.rs  sync.rs  wsi.rs
src/linker/: mod.rs  unix.rs  windows.rs
