[package]
name = "vulkan-rs"
version = "0.1.0"
authors = ["Emirhan Taşdeviren <emirhan.tasdeviren@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.4"

[dev-dependencies]
winit = { version = "0.26", default-features = false, features = ["x11"] }
